[tool.poetry]
name = "citationguard"
version = "0.1.0"
description = ""
authors = ["Mark <wernsdorfer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cryptography = "^44.0.0"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
